[tool.poetry]
name = "shop-api"
version = "0.1.0"
description = "Shop API"
authors = ["Gentian Demaj <gentiani101@gmail.com>"]
readme = "README.md"
packages = [{include = "shop_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.41"}
alembic = "^1.8.1"
databases = {extras = ["asyncpg"], version = "^0.6.1"}
uvicorn = {extras = ["standard"], version = "^0.18.3"}
asyncpg = "^0.26.0"
psycopg2-binary = "^2.9.3"
email-validator = "^1.3.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.8.0"
flake8 = "^5.0.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 119
extend_skip_glob = [
    ".git",
    ".venv",
    ".vscode",
    ".pytest_cache"
]
known_third_party = [
    "fastapi",
    "sqlalchemy",
    "databases",
]
known_first_party = [
    "core",
    "crud",
    "models",
    "routers",
    "schemas",
    "filters",
    "pagination",
    "responses"
]

[tool.black]
line-length = 119

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --color=yes"
testpaths = [
    "tests",
    "e2e",
    "integration",
    "unit"
]
