[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shop-api"
description = 'Shop API'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Gentian Demaj", email = "gentiai101@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/demaj/shop-api#readme"
Issues = "https://github.com/demaj/shop-api/issues"
Source = "https://github.com/demaj/shop-api"

[tool.hatch.version]
path = "shop_api/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=shop_api --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "shop_api/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 119
extend_skip_glob = [
    ".git",
    ".venv",
    ".vscode",
    ".envs",
    ".github",
    ".pytest_cache"
]
known_third_party = [
    "fastapi",
    "sqlalchemy",
    "databases",
]
known_first_party = [
    "core",
    "crud",
    "models",
    "routers",
    "schemas",
    "filters",
    "pagination",
    "responses"
]

[tool.black]
line-length = 119

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --color=yes"
testpaths = [
    "tests",
    "e2e",
    "integration",
    "unit"
]
